; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_atpx_handler.c_radeon_atpx_power_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_atpx_handler.c_radeon_atpx_power_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@VGA_SWITCHEROO_IGD = common dso_local global i32 0, align 4
@radeon_atpx_priv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @radeon_atpx_power_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @radeon_atpx_power_state(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @VGA_SWITCHEROO_IGD, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @radeon_atpx_set_discrete_state(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @radeon_atpx_priv, i32 0, i32 0), i32 %11)
  store i32 0, i32* %3, align 4
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @radeon_atpx_set_discrete_state(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
